2009-08-15  Thomas M Hinkle  <tom@minime>

	* src/lib/version.py (version): Push version to 0.15.0 (will be
	stable release -- dependencies, alas, have changed enough that
	0.13.x has become unstable on up-to-date systems.

	* create_manifest.py: Add style/ directory to manifest.

	* src/test_gui.py (BasicTests.tearDown): Make sure processes
	really die.

	* src/lib/threadManager.py (ThreadManagerGui.__init__): Add title
	to default dialog.

	* src/lib/reccard.py (TextFieldEditor.setup_main_interface): Add
	a11y names for all entries to help make dogtail-based testing
	easier.

	* src/lib/importers/interactive_importer.py: Fix default tags to
	include tags for all text fields.

	* src/lib/importers/importManager.py (ImportManager.offer_web_import):
	Remove "." from dialog title (Enter website address)

	* src/lib/importers/generic_recipe_parser.py (RecipeParser):
	Include notes in list of fields automatically parsed.
	(RecipeParser.ing_matcher): Fix typo in regexp that made any line
	starting with the letter "a" look like in ingredient (require a
	space between number or article and word)

	* src/lib/gglobals.py (REC_ATTRS): Fix typo that put extra colon in yield unit field.

2009-08-06  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/import_export/web_import_plugin/webpage_importer.py (WebParser.IGNORE):
	Ignore style tag.

	* src/lib/plugins/import_export/web_import_plugin/generic_web_importer_plugin.py (GenericWebImporter.get_importer):
	Fix typo (get_web_importer -> self.get_web_importer

2009-08-03  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/key_editor/keyEditor.py (KeyEditor.__init__):
	Fix case of 'key' (error caused extra search to be run on
	launching keyEditor.py)
	(KeyStore.limit): Only limit if text has changed.
	(KeyStore.get_recs): Fix recipe fetching (old DB change --
	id->recipe_id in ingredients table)

2009-07-28  Thomas M Hinkle  <tom@minime>

	* src/lib/reccard.py (RecCardDisplay.multiplication_change_cb):