@@ -1,3 +1,8 @@
+2009-08-18  Thomas M Hinkle  <tom@minime>
+
+	* src/lib/shopgui.py (ShopGui.__init__): Fix bug that screwed up
+	positions of panes in shopping list view.
+
 2009-08-15  Thomas M Hinkle  <tom@minime>
 
 	* src/lib/version.py (version): Push version to 0.15.0 (will be
